# corral

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: audit_trail.py  combined_detector.py  compare_detectors.py  policy.json  policy_gate.py  quickstart.py  validate_detector.py
paper/: paper.bib  paper.md
src/corral/: __init__.py  action.py
src/corral/audit/: __init__.py  log.py  merkle.py
src/corral/authz/: __init__.py  gate.py  policy.py
src/corral/earlywarning/: __init__.py  absorption.py
src/corral/herding/: __init__.py  concentration.py  detector.py  ensemble.py  nulls.py  rmt.py
src/corral/validation/: __init__.py  benchmark.py  simulator.py  stats.py
tests/: test_audit.py  test_authz.py  test_ensemble.py  test_rmt.py  test_smoke.py  test_validation.py
