[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corral-fleet"
description = "A safety layer for autonomous AI agents in finance, with tamper-evident audit, policy-as-code authorization, and herding detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Yashraj Behera", email = "y.raj1457@gmail.com" }]
keywords = [
    "financial-stability",
    "systemic-risk",
    "ai-agents",
    "herding",
    "audit-trail",
    "authorization",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.3"]
dev = ["pytest>=7", "ruff>=0.4", "scikit-learn>=1.3"]

[project.urls]
Homepage = "https://github.com/yraj1457/corral"
Source = "https://github.com/yraj1457/corral"

[tool.hatch.version]
path = "src/corral/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/corral"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
